<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.pantallaConfiguracionFiltros">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/seleccionalista"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/lista31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:text="@string/lista31" />

        <RadioButton
            android:id="@+id/lista41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:text="@string/lista41" />

        <RadioButton
            android:id="@+id/lista51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:text="@string/lista51" />

        <RadioButton
            android:id="@+id/lista61"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:text="@string/lista61" />

        <RadioButton
            android:id="@+id/lista71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:checked="true"
            android:text="@string/lista71" />
    </RadioGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:checked="true"
            android:text="@string/filtromarca" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:checked="true"
            android:text="@string/filtrocero" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:checked="true"
            android:text="@string/filtrodisponibles" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:text="@string/filtrodisponibilidad" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/filtos"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/prueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prueba"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/chipGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chipGroup" />

    <Button
        android:id="@+id/aplica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/redondeadoblack"
        android:onClick="aplicar"
        android:text="@string/aplicar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>