<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.inventario">

    <Button
        android:id="@+id/btnFiltro"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/redondeadoblack"
        android:onClick="filtros"
        android:text="@string/filtos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnInventario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnInventario"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:background="@drawable/redondeadorange"
        android:text="@string/inventario"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/redondeadomorado"
        android:text="@string/bitacora"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInventario" />
</androidx.constraintlayout.widget.ConstraintLayout>